--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "se0ga_gendiff",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Second project on hexlet.com",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/se0ga/project-lvl2-s321#readme",
   "dependencies": {
     "commander": "^2.17.1",
+    "js-yaml": "^3.12.0",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
