--- a/__tests__/__fixtures__/nested1.ini
+++ b/__tests__/__fixtures__/nested1.ini
@@ -6,6 +6,12 @@ setting3=true
 [common.setting6]
 key=value
 
+[common.setting6.setting6]
+key=value
+
+[common.setting6.setting6.setting6]
+key=value
+
 [group1]
 baz=bas
 foo=bar
