--- a/__tests__/__fixtures__/nested2.ini
+++ b/__tests__/__fixtures__/nested2.ini
@@ -13,6 +13,12 @@ key5=value5
 key=value
 ops=vops
 
+[common.setting6.setting6]
+key=value
+
+[common.setting6.setting6.setting6]
+key=valu1
+
 [group1]
 foo=bar
 baz=bars
