--- a/__tests__/__fixtures__/nested1.yml
+++ b/__tests__/__fixtures__/nested1.yml
@@ -4,6 +4,10 @@ common:
   setting3: true
   setting6:
     key: value
+    setting6:
+      key: value
+      setting6:
+        key: value
 group1:
   baz: bas
   foo: bar
